delete quiz route.
